css/styles.css
/* ... */
.team-item{
    border-radius: 0 0 4px 4px;
    width: calc((100% - 24px * 3) / 4);
    background-color: #FFFFFF;
    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    }
.team-content{
    padding: 32px 16px; 
}
.team-hero{
    margin-bottom: 8px;
}
.contact-link-team,
.contact-link-footer
{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 40px;
    height: 40px;
    border-radius: 50%;
    background-color: #4D5AE5;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.contact-link-team:hover,
.contact-link-team:focus {
    background-color: #404BBF;
}
.contact-link-footer:hover,
.contact-link-footer:focus {
    background-color:#31d0aa;
}
.contact-icon{
    fill: #F4F4FD;
}

.portfolio-list{
    display: flex;
    flex-wrap: wrap;
    gap: 48px 24px;
}

.portfolio-thumb {
    position: relative;
    overflow: hidden;
}
.overlay {
    padding: 40px 32px;
    background-color: #4D5AE5;
    color:#F4F4FD;
    font-family: sans-serif;
    font-weight: 400;
    font-size: 16px;
    line-height: 150%;
    letter-spacing: 0.02em;
    text-align: justify;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    transform: translateY(100%);
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
    position: absolute;
}
.portfolio-item:hover .overlay {
    transform: translateY(0);
}

.portfolio-category{
    margin-bottom: 8px;
}
.portfolio-item{
    width: calc((100% - 24px * 2) / 3);
    position: relative;
    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
}
.portfolio-item:hover {
    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
        0 1px 1px 0 rgba(46, 47, 66, 0.16),
        0 1px 6px 0 rgba(46, 47, 66, 0.08);
}
.portfolio-content{
    border-left: 1px solid #e7e9fc;
    border-right: 1px solid #e7e9fc;
    border-bottom: 1px solid #e7e9fc;
    padding: 32px 16px;

}
.portfolio-title{
    text-align: center;
    margin-bottom: 72px;

}

.team-hero,
.team-description{
    text-align: center;
}
.logo-footer{
    font-family: 'Raleway', sans-serif;
    font-size: 18px;
    font-weight: 700;
    text-transform: uppercase;
    color: #FFFFFF;
    display: inline-block;
    margin-bottom: 16px;
}
.logo-accent-footer{
    color: #4D5AE5;
}
.page-footer{
    padding-top: 100px;
    padding-bottom: 100px;
    
}
.footer-text{
    color: #FFFFFF;
    margin-top: 0;
    
}
.footer-content{
    max-width: 264px;

}
.contacts-footer-list{
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 16px;
}

.social-title,
.subscribe-title {
    color: #FFFFFF;
    font-weight: 500;
    font-size: 16px;
    line-height: 150%;
    letter-spacing: 0.02em;
    margin-bottom: 16px;
}

.container-footer{
    display: flex;
    align-items: baseline;
    /* gap: 120px; */
}
.container-footer>*:not(:last-child) {
    margin-right: 120px;
}
.container-footer> :nth-child(2) {
    margin-right: 80px;
}
.modal-overlay{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 999;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgba(46, 47, 66, 0.4);
    /* opacity: 0;
    visibility: hidden;
    pointer-events: none; */
    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms;
} 
.modal-overlay.is-open {
    opacity: 1;
    visibility: visible;
    pointer-events: auto;
}
.modal{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    max-width: 408px;
    width: 100%;
    min-height: 584px;
    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
    background-color: #FCFCFC;
    border-radius: 4px;
    padding: 72px 24px 24px 24px;

}

.modal-close-button{
    position: absolute;
    top: 24px;
    right: 24px;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 24px;
    height: 24px;
    border-radius: 100%;
    border: 1px solid rgba(0, 0, 0, 0.1);
    background-color:#E7E9FC;
    cursor: pointer;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.modal-close-button:hover,
.modal-close-button:focus{
    background-color: #404BBF;
    /* fill: #404BBF; */
}
.modal-close-button:hover .modal-close-icon,
.modal-close-button:focus .modal-close-icon {
    fill: #FFFFFF;
}
.modal-close-icon{
    fill: #2E2F42;
    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.modal-title{
    font-weight: 500;
    font-size: 16px;
    line-height: 150%;
    letter-spacing: 0.02em;
    text-align: center;
    color: #2E2F42;
    max-width: 360px;
    margin-bottom: 16px;
}
.modal-label{
    font-weight: 400;
    font-size: 12px;
    line-height: 117%;
    letter-spacing: 0.04em;
    color: #8E8F99;
    display: inline-block;
    margin-bottom: 4px;
}
.modal-input{
    width: 100%;
    border: 1px solid rgba(46, 47, 66, 0.4);
    border-radius: 4px;
    width: 100%;
    box-sizing: border-box;
    height: 40px;
    padding-left: 38px;
    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    
 }
.modal-input:focus{
    outline: transparent;
    border-color: #4D5AE5;
}
.modal-input:focus + .modal-contact-icon{
    outline: transparent;
    stroke: #4D5AE5;
    fill: #4D5AE5;
}
.button-submit{
    display: block;
    margin: 0 auto;
    border: none;
    border-radius: 4px;
    padding: 16px 32px;
    width: 169px;
    height: 56px;
    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
    background-color: #4D5AE5;
    color: #FFFFFF;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);

}
.button-submit:active {
    background-color: #404BBF;
}
.button-submit:hover,
.button-submit:focus {
    background-color: #404BBF;
}
/* ... */

